questions-responses: add questions responses